# FromBones

./: .clang-format  .clang-tidy  .cursorignore  .gitignore  CMakeLists.txt  CMakePresets.json  FromBones-Ubuntu22.04-Debug.workspace  FromBones-Ubuntu22.04-GL-Debug.workspace  FromBones-Ubuntu22.04-GL-Debug.workspace.layout  FromBones-Ubuntu22.04-VK-Debug-shared.workspace  FromBones-Ubuntu22.04-VK-Debug-shared.workspace.layout  FromBones-Ubuntu22.04-VK-Debug.workspace  FromBones-Ubuntu22.04-VK-Debug.workspace.layout  FromBones-Vulkan-Ubuntu22.04-Debug.workspace  FromBones-Win64-GL-Debug.workspace  FromBones-Win64-Release.workspace  FromBones.code-workspace  FromBonesVk-validationLayersOn  FromBonesVkDebug-validationLayersOn  GAME-BEHAVIOR.TODO  GAME-EDITOR.TODO  GAME-GENERAL.TODO  GAME-GRAPHICS.TODO  GAME-MAPWORLD.TODO  GAME-NETWORK.TODO  GAME-STORY.TODO  GAME-UI.TODO  LICENSE  README.md  TODO.txt  build.gradle.kts  cmake  gradle  gradle.properties  gradlew  gradlew.bat  local.properties  rakefile  restorelinks  script  (+1 more)
.codelite/: FromBones-Ubuntu22.04-VK-Debug.session
.github/workflows/: cmake-multi-platform.yml  pre-release.yml
app/: CMakeLists.txt  build.gradle.kts  local.properties  proguard-rules.pro
app/src/Shaders/Vulkan/: Basic.frag  Basic.vert  ShaderActors.frag  ShaderActors.vert  ShaderActors_VERTEXLIGHT.frag  ShaderActors_VERTEXLIGHT.vert  ShaderBackgrounds.frag  ShaderBackgrounds.vert  ShaderBackgrounds_VERTEXLIGHT.frag  ShaderFrontShapes.frag  ShaderFrontShapes.vert  ShaderFrontShapes_VERTEXLIGHT.frag  ShaderFrontShapes_VERTEXLIGHT.vert  ShaderGrounds.frag  ShaderGrounds.vert  ShaderGrounds_VERTEXLIGHT.frag  ShaderGrounds_VERTEXLIGHT.vert  ShaderRenderShapes.frag  ShaderRenderShapes.vert  ShaderRenderShapes_VERTEXLIGHT.frag  ShaderRenderShapes_VERTEXLIGHT.vert  Urho2D.frag  Urho2D.vert  WaterInside.frag  WaterInside.vert  WaterLine.frag  WaterLine.vert  WaterRefract.frag  WaterRefract.vert
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DefsChunks.cpp  DefsChunks.h  DefsColliders.cpp  DefsColliders.h  DefsCore.h  DefsEffects.cpp  DefsEffects.h  DefsEntityInfo.cpp  DefsEntityInfo.h  DefsFluids.cpp  DefsFluids.h  DefsGame.h  DefsMap.cpp  DefsMap.h  DefsMove.h  DefsNetwork.cpp  DefsNetwork.h  DefsShapes.cpp  DefsShapes.h  DefsViews.h  DefsWorld.cpp  DefsWorld.h  GameAttributes.cpp  GameAttributes.h  GameCommands.cpp  GameCommands.h  GameContext.cpp  GameContext.h  GameData.cpp  GameData.h  GameEvents.cpp  GameEvents.h  GameGoal.cpp  GameGoal.h  GameHelpers.cpp  GameHelpers.h  GameLibrary.cpp  GameLibrary.h  GameNetwork.cpp  (+6 more)
app/src/main/cpp/AI/: Behavior.cpp  Behavior.h  Dialogue.cpp  Dialogue.h  GOB_Follow.cpp  GOB_Follow.h  GOB_MountOn.cpp  GOB_MountOn.h  GOB_Patrol.cpp  GOB_Patrol.h  GOB_PlayerCPU.cpp  GOB_PlayerCPU.h  PathFinder2D.cpp  PathFinder2D.h
app/src/main/cpp/Actors/: Actor.cpp  Actor.h  DialogueFrame.cpp  DialogueFrame.h  Player.cpp  Player.h  SimpleActor.cpp  SimpleActor.h
app/src/main/cpp/Components/: CommonComponents.h  GOC_Abilities.cpp  GOC_Abilities.h  GOC_Animator2D.cpp  GOC_Animator2D.h  GOC_Attack.cpp  GOC_Attack.h  GOC_BodyExploder2D.cpp  GOC_BodyExploder2D.h  GOC_BodyFaller2D.cpp  GOC_BodyFaller2D.h  GOC_Collectable.cpp  GOC_Collectable.h  GOC_Collide2D.cpp  GOC_Collide2D.h  GOC_Controller.cpp  GOC_Controller.h  GOC_ControllerAI.cpp  GOC_ControllerAI.h  GOC_ControllerPlayer.cpp  GOC_ControllerPlayer.h  GOC_Destroyer.cpp  GOC_Destroyer.h  GOC_Detector.cpp  GOC_Detector.h  GOC_DropZone.cpp  GOC_DropZone.h  GOC_EntityAdder.cpp  GOC_EntityAdder.h  GOC_EntityFollower.cpp  GOC_EntityFollower.h  GOC_Inventory.cpp  GOC_Inventory.h  GOC_Life.cpp  GOC_Life.h  GOC_LightMyFire.cpp.tmp  GOC_LightMyFire.h.tmp  GOC_Move2D.cpp  GOC_Move2D.h  GOC_PhysicRope.cpp  (+13 more)
app/src/main/cpp/Generators/: AnimationCreator2D.cpp  AnimationCreator2D.h  LSystem.cpp  LSystem.h  MapColliderGenerator.cpp  MapColliderGenerator.h  MapGenerator.cpp  MapGenerator.h  MapGeneratorCellular.cpp  MapGeneratorCellular.h  MapGeneratorDungeon.cpp  MapGeneratorDungeon.h  MapGeneratorGround.cpp  MapGeneratorGround.h  MapGeneratorMaze.cpp  MapGeneratorMaze.h  MapGeneratorWorld.cpp  MapGeneratorWorld.h  MapSimulatorLiquid.cpp  MapSimulatorLiquid.h
app/src/main/cpp/GraphicEffects/: GEF_NodeShaker.cpp  GEF_NodeShaker.h  GEF_Rain.cpp  GEF_Rain.h  GEF_Scrolling.cpp  GEF_Scrolling.h  RenderShape.cpp  RenderShape.h  SplashScreen.cpp  SplashScreen.h  WaterLayer.cpp  WaterLayer.h
app/src/main/cpp/Libs/: anl.h  clipping.h  fastpoly2tri.h  wren.hpp
app/src/main/cpp/Managers/: GameStateManager.cpp  GameStateManager.h  MAN_Ai.cpp  MAN_Ai.h  MAN_Effects.cpp  MAN_Effects.h  MAN_Go.cpp  MAN_Go.h  MAN_Weather.cpp  MAN_Weather.h
app/src/main/cpp/Map/: Map.cpp  Map.h  MapCreator.cpp  MapCreator.h  MapFeatureTypes.cpp  MapFeatureTypes.h  MapFurnitures.cpp  MapFurnitures.h  (+20 more)
app/src/main/cppeditor/: CMakeLists.txt  MapEditorLib.cpp
app/src/main/cpplauncher/: CMakeLists.txt  Game.cpp  Game.h
app/src/main/cpptest/: CMakeLists.txt  test_ShortIntVector2.cpp  test_catch2.cpp
app/src/main/cpptest/catch2/: CMakeLists.txt
bin-tool/: ExportSVG.sh  ExportSVGUI.sh  ExportSVGUILauncher.sh  PackAll.sh  Publish.sh
cmake/Modules/: UrhoCommon.cmake
exe/: CoreData  Data  FromBones22.04Gl-noed-shared  FromBones22.04Vk-noed-shared  actor-medium-testsave.scml  launch-Vk.sh
exe/d3d/: engine_config.xml
exe/gl/: FromBonesClient.sh  FromBonesServer.sh  FromBonesServer1Client.sh  FromBonesServer2Clients.sh  engine_config-net.xml  engine_config.xml
exe/vk/: engine_config-net.xml  engine_config.xml
notes/: GAME-AI.TODO  GAME-BEHAVIOR.TODO  GAME-EDITOR.TODO  GAME-GENERAL.TODO  GAME-GRAPHICS.TODO  GAME-MAPWORLD.TODO  GAME-SOUND.TODO  GAME-STORY.TODO  Rendering.txt  TODO.txt  TODOMASTER.txt
script/: compile_shaders.sh  snapshots2gif.sh  vkValidation
source-tool/: CMakeLists.txt
source-tool/TexturePacker/: CMakeLists.txt  MemoryObjects.cpp  MemoryObjects.h  TexturePacker.cpp
workspaces/: FromBones.code-workspace  FromBonesVk-validationLayersOn  FromBonesVkDebug-validationLayersOn
(+251 files in other folders)
